[gd_scene load_steps=7 format=3 uid="uid://c3ohjeua6j723"]

[ext_resource type="Texture2D" uid="uid://l5ldfckswvsi" path="res://Asset/Grille/fondmorpion.png" id="1_342a2"]
[ext_resource type="Script" uid="uid://c7dplavovshnn" path="res://Script/grand_case_1.gd" id="1_u3d78"]
[ext_resource type="Texture2D" uid="uid://dqr26a57b1ydh" path="res://Asset/Grille/untitled.png" id="2_u3d78"]
[ext_resource type="Texture2D" uid="uid://8oawt07msgup" path="res://Asset/Symbole/BlueCircle.png" id="3_q6yvs"]
[ext_resource type="Texture2D" uid="uid://b7wx0qcrgiexj" path="res://Asset/Symbole/RedCross.png" id="4_shmjr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r34rm"]
size = Vector2(143, 144)

[node name="GrandeCase1" type="Node2D"]
script = ExtResource("1_u3d78")

[node name="Assets" type="Node2D" parent="."]

[node name="Fondmorpion" type="Sprite2D" parent="Assets"]
scale = Vector2(4.5, 4.5)
texture = ExtResource("1_342a2")

[node name="Ligne" type="Sprite2D" parent="Assets"]
scale = Vector2(30, 30)
texture = ExtResource("2_u3d78")

[node name="BlueCircle" type="Sprite2D" parent="Assets"]
visible = false
position = Vector2(123.91171, 124.9117)
scale = Vector2(1.8722407, 1.8722407)
texture = ExtResource("3_q6yvs")

[node name="RedCross" type="Sprite2D" parent="Assets"]
visible = false
position = Vector2(123.91171, 124.9117)
scale = Vector2(1.8722407, 1.8722407)
texture = ExtResource("4_shmjr")

[node name="ShapeCase" type="Node2D" parent="."]

[node name="ShapePetiteCase1" type="Area2D" parent="ShapeCase"]
position = Vector2(-182, -182)

[node name="CShape1" type="CollisionShape2D" parent="ShapeCase/ShapePetiteCase1"]
shape = SubResource("RectangleShape2D_r34rm")

[node name="ShapePetiteCase2" type="Area2D" parent="ShapeCase"]
position = Vector2(0, -182)

[node name="CShape2" type="CollisionShape2D" parent="ShapeCase/ShapePetiteCase2"]
shape = SubResource("RectangleShape2D_r34rm")

[node name="ShapePetiteCase3" type="Area2D" parent="ShapeCase"]
position = Vector2(182, -182)

[node name="CShape3" type="CollisionShape2D" parent="ShapeCase/ShapePetiteCase3"]
shape = SubResource("RectangleShape2D_r34rm")

[node name="ShapePetiteCase4" type="Area2D" parent="ShapeCase"]
position = Vector2(-183, 0)

[node name="CShape4" type="CollisionShape2D" parent="ShapeCase/ShapePetiteCase4"]
shape = SubResource("RectangleShape2D_r34rm")

[node name="ShapePetiteCase5" type="Area2D" parent="ShapeCase"]

[node name="CShape5" type="CollisionShape2D" parent="ShapeCase/ShapePetiteCase5"]
shape = SubResource("RectangleShape2D_r34rm")

[node name="ShapePetiteCase6" type="Area2D" parent="ShapeCase"]
position = Vector2(183, 0)

[node name="CShape6" type="CollisionShape2D" parent="ShapeCase/ShapePetiteCase6"]
shape = SubResource("RectangleShape2D_r34rm")

[node name="ShapePetiteCase7" type="Area2D" parent="ShapeCase"]
position = Vector2(-183, 182)

[node name="CShape7" type="CollisionShape2D" parent="ShapeCase/ShapePetiteCase7"]
shape = SubResource("RectangleShape2D_r34rm")

[node name="ShapePetiteCase8" type="Area2D" parent="ShapeCase"]
position = Vector2(0, 182)

[node name="CShape8" type="CollisionShape2D" parent="ShapeCase/ShapePetiteCase8"]
shape = SubResource("RectangleShape2D_r34rm")

[node name="ShapePetiteCase9" type="Area2D" parent="ShapeCase"]
position = Vector2(181, 183)

[node name="CShape9" type="CollisionShape2D" parent="ShapeCase/ShapePetiteCase9"]
position = Vector2(2, -1)
shape = SubResource("RectangleShape2D_r34rm")
